--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@ Aunque formar equipo parece la opción más lógica para ganar, al pasar más ti
 
 La novela explora temas como el perdón, la superación personal, el valor de enfrentar el pasado y la posibilidad de que el amor nazca incluso después del odio.</p> </div>
                 <div class="zona-comentarios">
-                    <input
-                        type="text"
-                        id="input-espiritusalvaje"
-                        placeholder="Cuentame tu opinion♡"
-                        >
+                    <input type="text" id="input-espiritusalvaje"placeholder="Cuentame tu opinion♡">
                     <button onclick="enviarComentario('espiritusalvaje')">
                         Comentar
                     </button>
@@ -45,11 +41,7 @@ As she trains to survive among warriors and demi-gods, the line between hero and
 
 Blood of Hercules is a gripping blend of mythology, dark romance, and survival, perfect for readers who enjoy fierce heroines, high-stakes trials, and mythological worlds rewritten with blood and fire.</p></div>
                 <div class="zona-comentarios">
-                    <input
-                        type="text"
-                        id="input-hercules"
-                        placeholder="Tell me your opinion♡"
-                        >
+                    <input type="text" id="input-hercules" placeholder="Tell me your opinion♡">
                     <button onclick="enviarComentario('hercules')">
                         Comment
                     </button>
